# fp2022

./: .gitignore  tasks.md
Asm/lib/: ast.ml  dune  interpreter.ml  interpreter.mli  monadError.ml  operandsHandler.ml  operandsHandler.mli  parser.ml  parser.mli  utils.ml  utils.mli
Asm4/lib/: dune  operandsHandler.ml  operandsHandler.mli
CSharpAsync/: CSharpAsync.opam  README.md  dune  dune-project
CSharpAsync/demos/: demoOnlyPrint.ml  demoShowContext.ml  dune  featuresTest.t
CSharpAsync/lib/: ast.ml  dune  interpreter.ml  interpreter_class.ml  interpreter_tests.ml  parser.ml  parser_tests.ml  tables.ml
Golang/: README.md  dune  interpret.t
Golang/examples/: arr_assign.go  closure_counter.go  closure_forloop.go  goroutines_channels.go  goroutines_sum.go  primes.go
Golang/lib/: ast.ml  ast_utils.ml  builtins.ml  channel.ml  (+10 more)
Make/: Make.opam
Menhir/: Menhir.opam  README.md  REPL.ml  dune-project
Menhir/demos/: demoInterpret.ml  demoParse.ml  dune  interpretTests.t  parseTests.t  parsingTests.t
Menhir/demos/demo_inputs/: demo_input1.mly
Menhir/lib/: ast.cmi  ast.cmo  ast.ml  ast.mli  dune  errors.ml  interpret.ml  lexer.ml  lexer.mli  lexer.mll  parser.ml  parser.mly  parser1.ml
OCamlADT/: README.md  REPL.ml
OCamlLabeledArgs/: OCamlLabeledArgs.opam  README.md  REPL.ml  dune-project
OCamlWithEffects/: README.md  REPL.ml
OCamlWithEffects/demos/: demo.ml  demo.t  demoAO.ml  demoNO.ml  demoParse.ml  dune
Prolog/: Prolog.opam  REPL.ml  dune-project
Ruby/: INTERPRET.ml  classes.t  functions.t  interpret.t  std_constructions.t
SQL/: Makefile  README.md  REPL.ml  SQL.opam  commands.txt  dune  dune-project
SQL/demos/: parsingTests.t
SQL/lib/: controller.ml  controller.mli  dune  helper.ml  helper.mli  parser.ml  parser.mli  rep.ml  rep.mli  save.ml  save.mli  tokenizer.ml  tokenizer.mli  tree.ml  tree.mli  type.ml  type.mli
SQL/test/: dune  expr_test.ml  main.ml  parser_test.ml  save_test.ml  tree_test.ml
SQLyd/: REPL.ml  dune-project
asm/: REPL.ml  conf-nasm.opam  dune  dune-project
(+475 files in other folders)
