(lang dune 2.8)

(name SQL)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Danil Yevdokimov")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name SQL)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
