(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries OCamlWithEffectsLib))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries OCamlWithEffectsLib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries OCamlWithEffectsLib stdio))

(cram
 (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe ../REPL.exe))
